Implemented repository pattern

--- a/UserManagement/UserManagement.DAL/UserManagement.DAL.csproj
+++ b/UserManagement/UserManagement.DAL/UserManagement.DAL.csproj
@@ -5,4 +5,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\UserManagement.EF\UserManagement.EF.csproj" />
+  </ItemGroup>
+
 </Project>
