Setup of CRUD operations

--- a/UserManagement/UserManagement.Core/UserManagement.Core/UserManagement.Core.csproj
+++ b/UserManagement/UserManagement.Core/UserManagement.Core/UserManagement.Core.csproj
@@ -5,4 +5,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\UserManagement.Data\UserManagement.DAL\UserManagement.DAL.csproj" />
+    <ProjectReference Include="..\UserManagement.Models\UserManagement.Models.csproj" />
+  </ItemGroup>
+
 </Project>
