--- a/UserManagement/UserManagement.API/UserManagement.API.csproj
+++ b/UserManagement/UserManagement.API/UserManagement.API.csproj
@@ -5,14 +5,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.15">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.15" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\UserManagement.Core\UserManagement.Core\UserManagement.Core.csproj" />
+    <ProjectReference Include="..\UserManagement.Core\UserManagement.Models\UserManagement.Models.csproj" />
+    <ProjectReference Include="..\UserManagement.Data\UserManagement.EF\UserManagement.EF.csproj" />
     <ProjectReference Include="..\UserManagement.EF\UserManagement.EF.csproj" />
   </ItemGroup>
 
