--- a/UserManagement/UserManagement.API/appsettings.Development.json
+++ b/UserManagement/UserManagement.API/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Database": {
+    "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=UserManagement;Trusted_Connection=True;"
   }
 }
