Added automapper and custom exceptions

--- a/UserManagement/UserManagement.Core/UserManagement.Core/UserManagement.Core.csproj
+++ b/UserManagement/UserManagement.Core/UserManagement.Core/UserManagement.Core.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\UserManagement.Data\UserManagement.DAL\UserManagement.DAL.csproj" />
     <ProjectReference Include="..\UserManagement.Models\UserManagement.Models.csproj" />
   </ItemGroup>
