--- a/UserManagement/UserManagement.Web/user-management/package.json
+++ b/UserManagement/UserManagement.Web/user-management/package.json
@@ -20,10 +20,11 @@
     "@angular/platform-browser": "~11.2.4",
     "@angular/platform-browser-dynamic": "~11.2.4",
     "@angular/router": "~11.2.4",
+    "bootstrap": "^5.1.3",
+    "jest-editor-support": "*",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.3",
-    "jest-editor-support": "*"
+    "zone.js": "~0.11.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.3",
