--- a/UserManagement/UserManagement.Web/user-management/package.json
+++ b/UserManagement/UserManagement.Web/user-management/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~11.2.4",
     "bootstrap": "^5.1.3",
     "jest-editor-support": "*",
+    "ngx-modal-dialog": "^4.0.0",
     "ngx-toastr": "^12.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
