--- a/UserManagement/UserManagement.Core/UserManagement.Core/UserManagement.Core.csproj
+++ b/UserManagement/UserManagement.Core/UserManagement.Core/UserManagement.Core.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.18" />
   </ItemGroup>
 
   <ItemGroup>
